--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,25 @@
-.qv-object-dataExtension div.qv-object-content-container {
+.qv-object-tableWithGrowth div.qv-object-content-container {
     height: 100%;
     width: 100%;
 }
 
-.qv-object-dataExtension table {
+.qv-object-tableWithGrowth table {
     width: 100%;
     table-layout: fixed;
 }
 
-.qv-object-dataExtension .tbl-header {
-    background-color: rgb(0, 0, 160);
-    color: rgb(255, 255, 255);
+.qv-object-tableWithGrowth .tbl-header {
     border-radius: 5px 5px 0 0;
 }
 
-.qv-object-dataExtension .tbl-content {
+.qv-object-tableWithGrowth .tbl-content {
     overflow-x: auto;
     margin-top: 0px;
     border: 1px solid rgb(220, 220, 220);
     border-radius: 0 0 5px 5px;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
 }
 
-.qv-object-dataExtension th {
+.qv-object-tableWithGrowth th {
     padding: 10px 5px;
     text-align: left;
     font-weight: 500;
@@ -32,7 +27,7 @@
     text-transform: uppercase;
 }
 
-.qv-object-dataExtension td {
+.qv-object-tableWithGrowth td {
     padding: 5px;
     text-align: left;
     vertical-align: middle;
@@ -41,11 +36,11 @@
     border-bottom: solid 1px rgb(220, 220, 220);
 }
 
-.qv-object-dataExtension .tbl-wrapper {
+.qv-object-tableWithGrowth .tbl-wrapper {
     padding:10px;
     height:calc(100% - 10px * 2);
 }
-.qv-object-dataExtension section {
+.qv-object-tableWithGrowth section {
     height: 100%;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -55,16 +50,23 @@
     flex-direction: column;
 }
 
-.qv-object-dataExtension .right-align {
+.qv-object-tableWithGrowth .right-align {
     text-align: right;
 }
 
-.qv-object-dataExtension .left-align {
+.qv-object-tableWithGrowth .left-align {
     text-align: left;
 }
 
-.qv-object-dataExtension .arrow {
+.qv-object-tableWithGrowth .arrow {
     width:16px;
+}
+
+.qv-object-tableWithGrowth .arrow img {
+    width:14px;
+    height:14px;
+    display:block;
+    margin:auto;
 }
 
 
