--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 .qv-object-tableWithGrowth .tbl-content {
-    overflow-x: auto;
+    overflow-x:scroll;
     margin-top: 0px;
     border: 1px solid rgb(220, 220, 220);
     border-radius: 0 0 5px 5px;
